[tool.poetry]
name = "pythondaq"
version = "0.1.0"
description = ""
authors = ["Thijs-de-Z <thijs.de.zeeuw8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.6.2"
pyvisa = "^1.12.0"
pyvisa-py = "^0.5.3"
pyserial = "^3.5"
pandas = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
characteristic = "pythondaq.views.view:i_u_characteristic"